[gd_scene load_steps=2 format=2]

[ext_resource path="res://world/EnemySpawner.gd" type="Script" id=1]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="TimerWave" type="Timer" parent="."]

[node name="TimerSpawn" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="TimerWave" to="." method="_on_TimerWave_timeout"]
